syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.exemplo.grpc";
option java_outer_classname = "MeteorologiaProto";

service MeteorologiaService {
  rpc CadastrarCidade (CidadeRequest) returns (CidadeResponse);
  rpc ListarCidades (Empty) returns (CidadesResponse);
  rpc ObterTemperaturaAtual (CidadeRequest) returns (TemperaturaResponse);
  rpc PrevisaoCincoDias (CidadeRequest) returns (PrevisaoResponse);
  rpc EstatisticasClimaticas (CidadeRequest) returns (EstatisticasResponse);
}

message Empty {}

message CidadeRequest {
  string nome = 1;
}

message CidadeResponse {
  string mensagem = 1;
}

message CidadesResponse {
  repeated string cidades = 1;
}

message TemperaturaResponse {
  double temperatura = 1;
}

message PrevisaoResponse {
  repeated double temperaturas = 1;
}

message EstatisticasResponse {
  double media = 1;
  double minima = 2;
  double maxima = 3;
}
